# adv_backend

./: Cargo.toml  api_doc.md  temp.rs
src/: app_state.rs  friends.rs  group_info.rs  helper.rs  main.rs  message.rs  sync_message.rs  user_info.rs  utils.rs
table_definition/: create_tables.sql
