[package]
name = "adv_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["http2", "json", "ws"] }
dotenvy = "0.15.7"
hyper = { version = "0.14.25", features = ["full"] }
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
sqlx = { version = "0.7.0-alpha.2", features = ["runtime-tokio","postgres"]}
serde_json = "1.0.96"
lru = "0.10.0"
uuid = {version = "1.3.1", features=["v4", "fast-rng", "macro-diagnostics", "serde"]}
openssl = "0.10"
rand = "0.8"
axum-extra = { version = "0.7.4", features = ["typed-routing"] }
